--- a/app/templates/components/modals/welcome.hbs
+++ b/app/templates/components/modals/welcome.hbs
@@ -1,4 +1,4 @@
-<Modal @title={{Welcome to (config "APP.name")!}} @confirmTitle="Okay">
+<Modal @title={{Welcome to (config "APP.name")}} @confirmTitle="Okay">
 	<p>Modal body text goes here.</p>
 </Modal>
 
