--- a/app/templates/components/modals/welcome-comp.hbs
+++ b/app/templates/components/modals/welcome-comp.hbs
@@ -1,4 +1,4 @@
-<div class="modal fade" id="welcomeModal" tabindex="-1" role="dialog">
+<div class="modal fade" id="welcomeModal1" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
