--- a/app/templates/subreddit.hbs
+++ b/app/templates/subreddit.hbs
@@ -27,6 +27,8 @@
 					<h6>Subscribers: {{number subredditInfo.subscribers}}</h6>
 					<h6>Online: {{number subredditInfo.active_user_count}}</h6>
 					<p>{{subredditInfo.public_description}}</p>
+					<h6>Rules</h6>
+					<p></p>
 					<button type="button" class="btn btn-block btn-outline-primary">Subscribe</button>
 					<button type="button" class="btn btn-block btn-outline-primary">Create Post</button>
 				{{else}}
