--- a/app/styles/overrides.scss
+++ b/app/styles/overrides.scss
@@ -20,8 +20,8 @@
 
 .btn-primary {
 	color: #fff;
-	background-color: $primary-color;
-	border-color: $primary-color
+	background-color: $primary-color !important;
+	border-color: $primary-color !important;
 }
 .btn-outline-primary {
 	color: $primary-color !important;
