--- a/app/templates/components/modal.hbs
+++ b/app/templates/components/modal.hbs
@@ -13,7 +13,7 @@
 			</div>
 			<div class="modal-footer">
 				{{!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> --}}
-				<button type="button" class="btn btn-primary-outline">{{confirmTitle}}</button>
+				<button type="button" class="btn btn-outline-primary">{{confirmTitle}}</button>
 			</div>
 		</div>
 	</div>
