--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -1,3 +1,5 @@
+// light
+
 $primary-color: rgb(145, 90, 246);
 $background-color: #f8f9fa;
 $foreground-color: white;
@@ -7,3 +9,15 @@ $subreddit-list-text-color: #333;
 $context-color: rgb(120, 124, 126);
 $line-color: rgb(206, 212, 218);
 $selected-post-color: rgb(238, 238, 238);
+
+// dark
+
+// $primary-color: rgb(255, 193, 7);
+// $background-color: rgb(34, 37, 43);
+// $foreground-color: rgb(41, 44, 52);
+// $progress-color: $primary-color;
+// 
+// $subreddit-list-text-color: #333;
+// $context-color: rgb(120, 124, 126);
+// $line-color: rgb(34, 37, 43);
+// $selected-post-color: rgb(238, 238, 238);
