--- a/app/styles/overrides.scss
+++ b/app/styles/overrides.scss
@@ -1,5 +1,22 @@
-// nprogress
+// body
+.bg-white {
+	background-color: $foreground-color !important;
+}
 
+// buttons
+.btn-primary {
+	color: #fff;
+	background-color: $primary-color !important;
+	border-color: $primary-color !important;
+}
+.btn-outline-primary {
+	color: $primary-color !important;
+	background-color: transparent !important;
+	background-image: none !important;
+	border-color: $primary-color !important;
+}
+
+// nprogress
 #nprogress {
 	.bar {
 		background: $progress-color !important;
@@ -15,29 +32,3 @@
 		display: none !important;
 	}
 }
-
-// buttons
-
-.btn-primary {
-	color: #fff;
-	background-color: $primary-color !important;
-	border-color: $primary-color !important;
-}
-.btn-outline-primary {
-	color: $primary-color !important;
-	background-color: transparent !important;
-	background-image: none !important;
-	border-color: $primary-color !important;
-}
-
-.btn-primary:hover{color:#fff;background-color:$primary-color;border-color:$primary-color}
-.btn-primary:focus,.btn-primary.focus{box-shadow:0 0 0 .2rem rgba(0,90,90,0.5)}
-.btn-primary.disabled,.btn-primary:disabled{color:#fff;background-color:$primary-color;border-color:$primary-color}
-.btn-primary:not(:disabled):not(.disabled):active,.btn-primary:not(:disabled):not(.disabled).active,.show>.btn-primary.dropdown-toggle{color:#fff;background-color:$primary-color;border-color:#000}
-.btn-primary:not(:disabled):not(.disabled):active:focus,.btn-primary:not(:disabled):not(.disabled).active:focus,.show>.btn-primary.dropdown-toggle:focus{box-shadow:0 0 0 .2rem rgba(0,90,90,0.5)}
-
-.btn-outline-primary:hover{color:#222;background-color:$primary-color;border-color:$primary-color}
-.btn-outline-primary:focus,.btn-outline-primary.focus{box-shadow:0 0 0 .2rem $primary-color}
-.btn-outline-primary.disabled,.btn-outline-primary:disabled{color:$primary-color;background-color:transparent}
-.btn-outline-primary:not(:disabled):not(.disabled):active,.btn-outline-primary:not(:disabled):not(.disabled).active,.show>.btn-outline-primary.dropdown-toggle{color:#fff;background-color:#009a9a;border-color:$primary-color}
-.btn-outline-primary:not(:disabled):not(.disabled):active:focus,.btn-outline-primary:not(:disabled):not(.disabled).active:focus,.show>.btn-outline-primary.dropdown-toggle:focus{box-shadow:0 0 0 .2rem rgba(0,128,128,0.5)}
